examples/errors/Return500Example.raml
#%RAML 1.0 NamedExample
value: {
    "error": {
        "code": 500,
        "reason": "Internal Server Error",
        "apiName": "service-cloud-sys-api",
        "correlationId": "0b4f9b30-8849-11ed-91af-0697988cb998",
        "dateTime": "2022-12-30T13:51:22.483Z",
        "message": {
            "description": "An error occurred while updating the contact."
        }
    }
}